--- a/src/components/chat/ChatLayout.module.css
+++ b/src/components/chat/ChatLayout.module.css
@@ -2,6 +2,7 @@
   height: 100%;
   display: flex;
   background: var(--white);
+  overflow: hidden;
 }
 
 .sidebar {
